Updates for Coq v8.11 compatibility

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ env:
   - CONTRIB_NAME=${TRAVIS_REPO_SLUG}
   matrix:
   - COQ_IMAGE="coqorg/coq:dev"
+  - COQ_IMAGE="coqorg/coq:8.11"
   - COQ_IMAGE="coqorg/coq:8.10"
   - COQ_IMAGE="coqorg/coq:8.9"
 
